[package]
name = "mind-body-api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.11.0", features = ["web-actix-web"] }
actix-web = "4.3.1"
serde = { version = "1.0.130", features = ["derive"] }
shuttle-runtime = "0.14.0"
shuttle-actix-web = "0.14.0"
tokio = "1.22.0"
